export const snapshot = {};

snapshot[`file group strategy with multi-props object as query parameter > tag file 1`] = `
{
  Default: 'import { makeApi, Zodios, type ZodiosOptions } from "@zodios/core";
import { z } from "zod";

const req = z
  .object({ prop1: z.number().int(), prop2: z.number().int() })
  .passthrough();

export const schemas = {
  req,
};

const endpoints = makeApi([
  {
    method: "post",
    path: "/api/v1/test",
    requestFormat: "json",
    parameters: [
      {
        name: "req",
        type: "Query",
        schema: req,
      },
    ],
    response: z.void(),
  },
]);

export const DefaultApi = new Zodios(endpoints);

export function createApiClient(baseUrl: string, options?: ZodiosOptions) {
  return new Zodios(baseUrl, endpoints, options);
}
',
  __index: 'export { DefaultApi } from "./Default";
',
}
`;

snapshot[`file group strategy with multi-props object as query parameter > method file 1`] = `
{
  __index: 'export { PostApi } from "./post";
',
  post: 'import { makeApi, Zodios, type ZodiosOptions } from "@zodios/core";
import { z } from "zod";

const req = z
  .object({ prop1: z.number().int(), prop2: z.number().int() })
  .passthrough();

export const schemas = {
  req,
};

const endpoints = makeApi([
  {
    method: "post",
    path: "/api/v1/test",
    requestFormat: "json",
    parameters: [
      {
        name: "req",
        type: "Query",
        schema: req,
      },
    ],
    response: z.void(),
  },
]);

export const PostApi = new Zodios(endpoints);

export function createApiClient(baseUrl: string, options?: ZodiosOptions) {
  return new Zodios(baseUrl, endpoints, options);
}
',
}
`;
